index.css
body
{
    height: 100%;
    margin: 0;
    min-width: 1500px;
}

.middle-align-section
{
    display: table-cell;
    vertical-align: middle;
    width: 100%;
    height: calc(100vh - 150px);
}

.page-sticky-header
{
    z-index: 100;
    width: 100%;
    background-color: white;
    position: sticky;
    top: 0;
    text-align: center;
    font-family: 'PT Sans Narrow', sans-serif;
    font-size: 32px;
}

.first-letter-red::first-letter
{
    color: red;
}

footer
{
    z-index: 100;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 14px;
    position: sticky;
    bottom: 0;
    background-color: white;
    width: 100%;
}

footer .left-align-block
{
    margin: 0;
    margin-left: 15px;
    text-align: left;
    display: inline-block;
}

footer .right-align-block
{
    margin: 0;
    margin-right: 15px;
    float: right;
    vertical-align: bottom;
}

footer img
{
    width: 20px;
    height: 15px;
}

.carousel-wrapper
{
    width: 100%;
    text-align: center;
}

.corousel-label
{
    transition-property: left;
    transition-duration: 1s;
    display: inline-block;
    height: 300px;
    width: 30%;
    margin: 1.5%;
    text-align: center;
    position: relative;
    left: -66%;
}

label > img
{
    vertical-align: middle;
    display: inline-block;
    width: 90%;
    height: 80%;
    opacity: .7;
    transition-property: all;
    transition-duration: .8s;
    border-radius: 5px;
}

.labels
{
    width: 100%;
    height: 100%;
    white-space: nowrap;
    overflow: hidden;

}

.title-black-back
{
    transition-property: opacity;
    transition-duration: .5s;
    width: 100%;
    height: 100%;
    opacity: 0;
    position: absolute;
    top: 0;
    left: 0;
    display: none;
}

.title-black-back a
{
    position: relative;
    height: 100%;
    text-align: center;
    display: block;
    font-size: 30px;
    color: white;
    font-family: Arial, Helvetica, sans-serif;
}

a:hover
{
    text-decoration-line: underline;
}

input[id='sld1']:checked ~ .labels .corousel-label
{
    position: relative;
    left: 33%;
}

input[id='sld1']:checked ~ .labels label[for='sld1'] > img
{
    opacity: 1;
    width: 100%;
    height: 100%;
    box-shadow: -2px 3px 5px -3px black;
}

input[id='sld1']:checked ~ .labels label[for='sld1'] + .title-black-back 
{
    display: block;
}

input[id='sld1']:checked ~ .labels label[for='sld1'] + .title-black-back:hover
{
    border-radius: 5px;
    opacity: 1;
    display: block;
    text-align: center;
    background-color: rgba(0, 0, 0, .5);
}

input[id='sld2']:checked ~ .labels .corousel-label
{
    position: relative;
    left: 0;
}

input[id='sld2']:checked ~ .labels label[for='sld2'] > img
{
    opacity: 1;
    width: 100%;
    height: 100%;
    box-shadow: -2px 3px 5px -3px black;
}

input[id='sld2']:checked ~ .labels label[for='sld2'] + .title-black-back 
{
    display: block;
}

input[id='sld2']:checked ~ .labels label[for='sld2'] + .title-black-back:hover
{
    border-radius: 5px;
    opacity: 1;
    display: block;
    text-align: center;
    background-color: rgba(0, 0, 0, .5);
}

input[id='sld3']:checked ~ .labels .corousel-label
{
    position: relative;
    left: -33%;
}

input[id='sld3']:checked ~ .labels label[for='sld3'] > img
{
    opacity: 1;
    width: 100%;
    height: 100%;
    box-shadow: -2px 3px 5px -3px black;
}

input[id='sld3']:checked ~ .labels label[for='sld3'] + .title-black-back 
{
    display: block;
}

input[id='sld3']:checked ~ .labels label[for='sld3'] + .title-black-back:hover
{
    border-radius: 5px;
    opacity: 1;
    display: block;
    text-align: center;
    background-color: rgba(0, 0, 0, .5);
}

input[id='sld4']:checked ~ .labels .corousel-label
{
    position: relative;
    left: -66%;
}

input[id='sld4']:checked ~ .labels label[for='sld4'] > img
{
    opacity: 1;
    width: 100%;
    height: 100%;
    box-shadow: -2px 3px 5px -3px black;
}

input[id='sld4']:checked ~ .labels label[for='sld4'] + .title-black-back 
{
    display: block;
}

input[id='sld4']:checked ~ .labels label[for='sld4'] + .title-black-back:hover
{
    border-radius: 5px;
    opacity: 1;
    display: block;
    text-align: center;
    background-color: rgba(0, 0, 0, .5);
}

input[id='sld5']:checked ~ .labels .corousel-label
{
    position: relative;
    left: -99%;
}

input[id='sld5']:checked ~ .labels label[for='sld5'] > img
{
    opacity: 1;
    width: 100%;
    height: 100%;
    box-shadow: -2px 3px 5px -3px black;
}

input[id='sld5']:checked ~ .labels label[for='sld5'] + .title-black-back 
{
    display: block;
}

input[id='sld5']:checked ~ .labels label[for='sld5'] + .title-black-back:hover
{
    border-radius: 5px;
    opacity: 1;
    display: block;
    text-align: center;
    background-color: rgba(0, 0, 0, .5);
}

input[id='sld6']:checked ~ .labels .corousel-label
{
    position: relative;
    left: -133%;
}

input[id='sld6']:checked ~ .labels label[for='sld6'] > img
{
    opacity: 1;
    width: 100%;
    height: 100%;
    box-shadow: -2px 3px 5px -3px black;
}

input[id='sld6']:checked ~ .labels label[for='sld6'] + .title-black-back 
{
    display: block;
}

input[id='sld6']:checked ~ .labels label[for='sld6'] + .title-black-back:hover
{
    border-radius: 5px;
    opacity: 1;
    display: block;
    text-align: center;
    background-color: rgba(0, 0, 0, .5);
}

input[id='sld7']:checked ~ .labels .corousel-label
{
    position: relative;
    left: -166%;
}

input[id='sld7']:checked ~ .labels label[for='sld7'] > img
{
    opacity: 1;
    width: 100%;
    height: 100%;
    box-shadow: -2px 3px 5px -3px black;
}

input[id='sld7']:checked ~ .labels label[for='sld7'] + .title-black-back 
{
    display: block;
}

input[id='sld7']:checked ~ .labels label[for='sld7'] + .title-black-back:hover
{
    border-radius: 5px;
    opacity: 1;
    display: block;
    text-align: center;
    background-color: rgba(0, 0, 0, .5);
}

input[id='sld8']:checked ~ .labels .corousel-label
{
    position: relative;
    left: -199%;
}

input[id='sld8']:checked ~ .labels label[for='sld8'] > img
{
    opacity: 1;
    width: 100%;
    height: 100%;
    box-shadow: -2px 3px 5px -3px black;
}

input[id='sld8']:checked ~ .labels label[for='sld8'] + .title-black-back 
{
    display: block;
}

input[id='sld8']:checked ~ .labels label[for='sld8'] + .title-black-back:hover
{
    border-radius: 5px;
    opacity: 1;
    display: block;
    text-align: center;
    background-color: rgba(0, 0, 0, .5);
}

input[id='sld9']:checked ~ .labels .corousel-label
{
    position: relative;
    left: -233%;
}

input[id='sld9']:checked ~ .labels label[for='sld9'] > img
{
    opacity: 1;
    width: 100%;
    height: 100%;
    box-shadow: -2px 3px 5px -3px black;
}

input[id='sld9']:checked ~ .labels label[for='sld9'] + .title-black-back 
{
    display: block;
}

input[id='sld9']:checked ~ .labels label[for='sld9'] + .title-black-back:hover
{
    border-radius: 5px;
    opacity: 1;
    display: block;
    text-align: center;
    background-color: rgba(0, 0, 0, .5);
}

input[id='sld10']:checked ~ .labels .corousel-label
{
    position: relative;
    left: -266%;
}

input[id='sld10']:checked ~ .labels label[for='sld10'] > img
{
    opacity: 1;
    width: 100%;
    height: 100%;
    box-shadow: -2px 3px 5px -3px black;
}

input[id='sld10']:checked ~ .labels label[for='sld10'] + .title-black-back 
{
    display: block;
}

input[id='sld10']:checked ~ .labels label[for='sld10'] + .title-black-back:hover
{
    border-radius: 5px;
    opacity: 1;
    display: block;
    text-align: center;
    background-color: rgba(0, 0, 0, .5);
}

.middle-block-text
{
    margin-top: 25%;
}

.modal
{
    display: none;
    opacity: 0;
    transition-property: all;
    transition-duration: .8s;
    background: rgba(0, 0, 0, .8);
    left: calc(50% - 500px);
    top: calc(50% - 200px);
    position: absolute;
    width: 1000px;
    height: 400px;
    border-radius: 5px;
    box-shadow: 0 3px 7px rgba(0,0,0,.25);
    z-index: 50;
    text-align: left;
    color: white;
}

.modal:target
{
    display: block;
    opacity: 1;
}

.modal:target ~ .black-absolute-background
{
    display: block;
}

.inline-div-pic-container
{
    width: 600px;
    height: 100%;
    margin: 0;
}

.inline-div-content-container
{
    width: 395px;
    height: 100%;
    margin: 0;
}

.modal img
{
    border-radius: 5px 0 0 5px;
    width: 100%;
    height: 100%;
}

.modal header .name-middle-align
{
    display: inline-block;
    margin-top: 20px;
    margin-left: 20px;
    font-size: 40px;
}

.modal .info-section
{
    font-size: 20px;
    margin: 20px;
}

.modal header,
.modal section
{
    display: block;
    text-align: left;
    color: inherit;
    background-color: rgba(0, 0, 0, 0);
}

.modal .btn
{
    font-size: 20px;
    margin-right: 5px;
    text-align: right;
    color: inherit;
    float: right;
}

.inline-div-pic-container,
.inline-div-content-container
{
    font-family: Arial, Helvetica, sans-serif;
    vertical-align: top;
    display: inline-block;
}

.black-absolute-background
{
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, .8);
    z-index: 25;
}

footer a
{
    color: #4c4cd8;
}

